--- a/css/style.css
+++ b/css/style.css
@@ -614,7 +614,7 @@ body {
 }
 
 .reservas {
-  height: 49z0px;
+  height: 490px;
 }
 @media screen and (max-width: 767px) {
   .reservas {
@@ -2483,9 +2483,10 @@ body {
 
 .button-dos {
   font-family: "Kalam", cursive;
-  height: 50px;
-  width: 280px;
+  height: 45px;
+  width: 260px;
   background-color: #cd6032;
+  padding-top: 5px;
   color: #fff;
   font-size: 22px;
   border-radius: 10px;
