--- a/scss/style.scss
+++ b/scss/style.scss
@@ -344,6 +344,7 @@ body {
 
   .navbar-light .navbar-toggler {
     color: #fff !important;
+    background-color:#fff;
     width: 33px;
     height: 18px;
   }
