se agregan cambios de medida en  fuentes e img

--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -138,6 +138,7 @@ $justifyContent-terciario: flex-end;
   @media screen and (max-width: 767px) {
     grid-column: 2/-1;
     grid-row: 2/3;
+    align-items: $alineacionItem-primario;
   }
 }
 
