--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,7 @@ body {
   .img-nuestra-empresa {
     grid-column: 2/-1;
     grid-row: 2/3;
+    align-items: center;
   }
 }
 
@@ -616,12 +617,13 @@ body {
 }
 @media screen and (max-width: 767px) {
   .parrafo-tiare {
-    padding-left: 5px;
+    padding-left: 0;
   }
 }
 @media screen and (max-width: 400px) {
   .parrafo-tiare {
     padding-right: 2px;
+    padding-left: 0;
   }
 }
 
@@ -636,7 +638,7 @@ body {
   .img {
     max-width: 95%;
     margin-bottom: 25px;
-    margin-left: 19px;
+    margin-left: 12px;
   }
 }
 @media screen and (max-width: 400px) {
@@ -727,7 +729,7 @@ body {
 .button-dos {
   height: auto;
   width: 450px;
-  padding: 5px 20px;
+  padding: 7px 20px;
   border-radius: 10px;
   margin-top: 5px;
   margin-bottom: 5px;
@@ -735,11 +737,15 @@ body {
 @media screen and (max-width: 767px) {
   .button-dos {
     width: 320px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 }
 @media screen and (max-width: 400px) {
   .button-dos {
     width: 300px;
+    margin-left: 0px;
+    margin-right: 0px;
   }
 }
 
@@ -849,8 +855,8 @@ body {
 
 @media screen and (max-width: 767px) {
   .parrafo-empresa {
-    margin-top: 0.625rem;
-    padding-right: 30px;
+    margin-top: 10px;
+    padding-right: 14px;
   }
 }
 @media screen and (max-width: 400px) {
@@ -869,9 +875,9 @@ body {
 }
 @media screen and (max-width: 767px) {
   .img-empresa {
-    width: 92%;
+    width: 95%;
+    align-items: center;
     margin-top: 0;
-    margin-right: 20px;
     margin-bottom: 30px;
   }
 }
@@ -1049,9 +1055,9 @@ input[type=checkbox]:checked {
 @media screen and (max-width: 400px) {
   .btn_volver {
     height: 45px;
-    width: 90%;
+    width: 87%;
     padding: 0;
-    margin: 0 20px 0 20px;
+    margin: 0 16px 0 20px;
   }
 }
 
@@ -1864,6 +1870,12 @@ body {
 @media screen and (max-width: 767px) {
   .btn_volver,
 .formulario__btn {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .btn_volver,
+.formulario__btn {
     font-size: 12px;
   }
 }
@@ -1992,7 +2004,7 @@ body {
 }
 @media screen and (max-width: 400px) {
   .boton_cotizar {
-    font-size: 14px;
+    font-size: 12px;
   }
 }
 
@@ -2002,7 +2014,7 @@ body {
 }
 @media screen and (max-width: 400px) {
   .boton_reservar {
-    font-size: 14px;
+    font-size: 12px;
   }
 }
 
@@ -2049,7 +2061,7 @@ body {
     font-size: 25px;
   }
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 400px) {
   .titulo_reservar {
     font-size: 18px;
   }
@@ -2066,7 +2078,7 @@ body {
     font-size: 16px;
   }
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 400px) {
   .texto_reservar_uno,
 .texto_reservar_dos {
     font-size: 14px;
@@ -2082,7 +2094,7 @@ body {
     font-size: 14px;
   }
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 400px) {
   .formulario__label__dos {
     font-size: 14px;
   }
@@ -2097,7 +2109,7 @@ body {
     font-size: 15px;
   }
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 400px) {
   .formulario__input__dos {
     font-size: 14px;
   }
@@ -2108,7 +2120,7 @@ body {
 }
 
 .formulario__validacion-estado__dos {
-  font-size: 15px;
+  font-size: 13px;
 }
 
 .btn_salir,
@@ -2122,7 +2134,7 @@ body {
     font-size: 14px;
   }
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 400px) {
   .btn_salir,
 .formulario__btn__dos {
     font-size: 12px;
