--- a/scss/_medidas.scss
+++ b/scss/_medidas.scss
@@ -5,7 +5,7 @@
   @media screen and (max-width: 767px) {
     padding: 0.313rem 0.625rem 0.313rem 0.625rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     height: 70px;
     padding: 0.313rem 0.625rem 0.313rem 0.625rem;
   }
@@ -16,9 +16,24 @@
   height: auto;
   @media screen and (max-width: 767px) {
     width: 80px;
+    margin-left: 5px;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     width: 70px;
+    margin-left: 0;
+  }
+}
+
+.px-5 {
+  @media screen and (max-width: 767px) {
+    padding-right: 4rem !important;
+    padding-left: 4rem !important;
+  }
+  @media screen and (max-width: 450px) {
+    margin-left: 5px;
+    margin-right: 5px;
+    padding-right: 2rem !important;
+    padding-left: 2rem !important;
   }
 }
 
@@ -29,7 +44,7 @@
     width: 42px;
     height: 15px;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     width: 36px;
     height: 17px;
   }
@@ -52,7 +67,7 @@
   @media screen and (max-width: 767px) {
     margin: 0.125rem 0.625rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     margin: 2px;
   }
 }
@@ -61,9 +76,10 @@
   padding-top: 70px;
   padding-bottom: 40px;
   @media screen and (max-width: 767px) {
-    padding: 40px 0;
+    padding: 40px 30px;
   }
-  @media screen and (max-width: 400px) {
+
+  @media screen and (max-width: 450px) {
     padding: 20px 0;
   }
 }
@@ -72,18 +88,13 @@
   @media screen and (max-width: 767px) {
     margin-top: 10px;
     margin-bottom: 10px;
-    padding-left: 0;
-    padding-right: 0;
   }
 }
 
 .parrafo-tiare {
   margin-bottom: 15px;
-  @media screen and (max-width: 767px) {
-    padding-left: 0;
-  }
-  @media screen and (max-width: 400px) {
-    padding-right: 2px;
+  @media screen and (max-width: 450px) {
+    padding-right: 5px;
     padding-left: 0;
   }
 }
@@ -95,23 +106,25 @@
   border-radius: 10px;
   margin-bottom: 30px;
   @media screen and (max-width: 767px) {
-    max-width: 95%;
+    max-width: 100%;
     margin-bottom: 25px;
-    margin-left: 12px;
+    justify-content: center;
+    align-items: center;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     max-width: 83%;
     margin-left: 34px;
+    margin-right: 0;
   }
 }
 
 .textos-tiare {
   margin-left: 1.875rem;
   @media screen and (max-width: 767px) {
-    margin: 20px;
+    margin: 0;
   }
-  @media screen and (max-width: 400px) {
-    margin: 20px 35px;
+  @media screen and (max-width: 450px) {
+    margin: 20px 34px;
   }
 }
 
@@ -125,7 +138,7 @@
   @media screen and (max-width: 767px) {
     width: 130px;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     height: 40px;
     width: 110px;
     margin-bottom: 0;
@@ -138,7 +151,7 @@
   @media screen and (max-width: 767px) {
     padding: 10px 0 40px 0;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     padding-bottom: 25px;
   }
 }
@@ -148,20 +161,21 @@
   @media screen and (max-width: 767px) {
     padding-top: 0;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     margin-bottom: 0;
     padding-bottom: 5px;
   }
 }
 
 .parrafo-reserva {
+  margin-bottom: 10px;
   @media screen and (max-width: 767px) {
     padding-left: 20px;
     padding-right: 20px;
+    margin-bottom: 5px;
   }
-  @media screen and (max-width: 400px) {
-    margin-left: 5px;
-    margin-right: 5px;
+  @media screen and (max-width: 450px) {
+    margin: 0 34px 5px 34px;
   }
 }
 
@@ -173,14 +187,10 @@
   margin-top: 5px;
   margin-bottom: 5px;
   @media screen and (max-width: 767px) {
-    width: 320px;
-    margin-left: 20px;
-    margin-right: 20px;
+    width: 322px;
   }
-  @media screen and (max-width: 400px) {
-    width: 300px;
-    margin-left: 0px;
-    margin-right: 0px;
+  @media screen and (max-width: 450px) {
+    width: 312px;
   }
 }
 
@@ -236,11 +246,11 @@
   padding-bottom: 15px;
   @media screen and (max-width: 767px) {
     margin-top: 10px;
-    padding-left: 60px;
-    padding-right: 50px;
+    padding-left: 40px;
+    padding-right: 40px;
     padding-bottom: 10px;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     margin-top: 10px;
     padding-left: 20px;
     padding-right: 25px;
@@ -250,7 +260,7 @@
 
 .titulo-empresa {
   padding-top: 20px;
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     margin-bottom: 10px;
     padding-top: 10px;
   }
@@ -259,26 +269,21 @@
 .nuestra-empresa {
   padding: 60px 20px;
   @media screen and (max-width: 767px) {
-    padding: 40px 20px;
+    padding: 40px 35px;
   }
 }
 
 .textos-nuestra-empresa {
-  @media screen and (max-width: 767px) {
-    margin-right: 15px;
-  }
-  @media screen and (max-width: 400px) {
-    padding: 10px 0 10px 20px;
+  @media screen and (max-width: 450px) {
+    padding: 10px 0 10px 0;
   }
 }
 
 .parrafo-empresa {
   @media screen and (max-width: 767px) {
     margin-top: 10px;
-    padding-right: 14px;
-  }
-  @media screen and (max-width: 400px) {
-    padding-right: 10px;
+    justify-content: center;
+    align-items: center;
   }
 }
 
@@ -290,14 +295,16 @@
   margin-right: 1.875rem;
   border-radius: 10px;
   @media screen and (max-width: 767px) {
-    width: 95%;
-    align-items: center;;
+    margin-right: 0;
     margin-top: 0;
     margin-bottom: 30px;
+    max-width: 100%;
+    justify-content: center;
+    align-items: center;
   }
-  @media screen and (max-width: 400px) {
-    width: 90%;
-    margin: 0 20px 20px 17px;
+  @media screen and (max-width: 450px) {
+    max-width: 100%;
+    margin-bottom: 20px;
   }
 }
 
@@ -312,7 +319,7 @@
   @media screen and (max-width: 767px) {
     padding: 45px 20px;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     height: 350px;
     padding: 35px 10px 20px 10px;
   }
@@ -323,7 +330,7 @@
   @media screen and (max-width: 767px) {
     margin-bottom: 1.875rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     margin: 0.625rem 0 0.313rem 0.625rem;
   }
 }
@@ -345,7 +352,7 @@
   @media screen and (max-width: 767px) {
     margin-left: 41%;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     margin-left: 48%;
   }
 }
@@ -365,7 +372,7 @@
   @media screen and (max-width: 767px) {
     padding: 4.375rem 1.25rem 4.375rem 1.25rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     padding: 60px 20px;
     min-width: 380px;
   }
@@ -385,7 +392,7 @@
 
 .titulo_contactanos {
   padding: 1.25rem 0 0.625rem 0;
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     padding: 0.625rem 0 0.625rem 0;
   }
 }
@@ -428,7 +435,7 @@ input[type="checkbox"]:checked {
 
 .btn__dos {
   padding: 0.625rem 0.625rem 1.25rem 0;
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     padding: 10px 10px 20px 0;
   }
 }
@@ -439,7 +446,7 @@ input[type="checkbox"]:checked {
   padding: 0.313rem;
   margin: 0 1.25rem 0 1.25rem;
   border-radius: 10px;
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     height: 45px;
     width: 87%;
     padding: 0;
@@ -453,7 +460,7 @@ input[type="checkbox"]:checked {
   margin: 0 1.25rem 0 1.25rem;
   padding: 0.313rem;
   border-radius: 10px;
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     margin: 0 20px 0 20px;
     padding: 5px;
   }
@@ -464,9 +471,9 @@ input[type="checkbox"]:checked {
 .formulario__dos {
   padding: 5.625rem 2.5rem 5.625rem 2.5rem;
   @media screen and (max-width: 767px) {
-    padding: 4.375rem 1.25rem 4.375rem 1.25rem;
+    padding: 4.375rem 1.875rem 4.375rem 1.875rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     padding: 60px 20px;
     min-width: 380px;
   }
@@ -476,8 +483,8 @@ input[type="checkbox"]:checked {
   height: auto;
   padding: 1.25rem 0.625rem 1.25rem 0.625rem;
   border-radius: 10px;
-  border-width: 3px;
-  @media screen and (max-width: 400px) {
+
+  @media screen and (max-width: 450px) {
     width: 100%;
   }
 }
@@ -488,7 +495,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     padding: 1.25rem 1.25rem 0 1.25rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     padding: 1.25rem 1.563rem 0 1.563rem;
   }
 }
@@ -507,7 +514,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin-bottom: 1rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     margin: 0 0.625rem 0 0.625rem;
     padding: 0.625rem 1.25rem 1.25rem 1.25rem;
   }
@@ -518,7 +525,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 0 0.375rem 0 1.25rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     margin: 1.25rem 0 0.313rem 0;
   }
 }
@@ -528,7 +535,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin-right: 0.375rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     margin-right: 0.813rem;
     margin-bottom: 0.625rem;
   }
@@ -539,7 +546,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 0 0.313rem 1.25rem 0.625rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     margin: 0 0.313rem 0.625rem 0.625rem;
   }
 }
@@ -551,7 +558,7 @@ input[type="checkbox"]:checked {
     margin-right: 0.813rem;
     margin-left: 0;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     margin: 0 0.813rem 0.313rem 0;
   }
 }
@@ -568,7 +575,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     width: 132px;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     width: 132px;
   }
 }
@@ -579,7 +586,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     padding-top: 0;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     padding-bottom: 0.625rem;
     padding-top: 0;
   }
@@ -591,7 +598,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin-left: 0.625rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     margin-left: 0.625rem;
   }
 }
@@ -601,7 +608,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin-left: 0.563rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     margin-left: 0.563rem;
   }
 }
@@ -611,7 +618,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin-left: 0.5rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     margin-left: 0.5rem;
     margin-bottom: 0.625rem;
   }
@@ -627,7 +634,7 @@ input[type="checkbox"]:checked {
     width: 141px;
     margin: 0.313rem 0 0.625rem 0.625rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     width: 141px;
     margin: 0.313rem 0 0.625rem 0.625rem;
   }
@@ -643,7 +650,7 @@ input[type="checkbox"]:checked {
     width: 122px;
     margin: 0.313rem 0 0.625rem 0.625rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     width: 122px;
     margin: 0.313rem 0 0.625rem 0.625rem;
   }
@@ -659,7 +666,7 @@ input[type="checkbox"]:checked {
     width: 106px;
     margin: 0.313rem 0 0.625rem 0.625rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     width: 106px;
     margin: 0.313rem 0 0.625rem 0.625rem;
   }
@@ -671,7 +678,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     padding: 0.625rem 0 0.625rem 0;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     padding: 0 10px;
   }
 }
@@ -684,7 +691,7 @@ input[type="checkbox"]:checked {
     width: 90px;
     margin: 0 0.625rem 0.625rem 0.625rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     width: 100%;
     margin: 0 0 10px 0;
   }
@@ -699,7 +706,7 @@ input[type="checkbox"]:checked {
     width: 90px;
     margin: 0 0.625rem 0.625rem 0;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     width: 100%;
     margin: 0 0.625rem 0.625rem 0;
   }
@@ -715,7 +722,7 @@ input[type="checkbox"]:checked {
     margin-left: 0.5rem;
     margin-bottom: 0.625rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     width: 67%;
     margin-left: 0.563rem;
     margin-bottom: 0.625rem;
@@ -727,7 +734,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 0.625rem 0 0.625rem 1.563rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     margin: 0.625rem 0 0.625rem 1.188rem;
   }
 }
@@ -737,7 +744,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 0.625rem 0.638rem 0.625rem 0;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     margin: 0.625rem 0.938rem 0.625rem 0;
   }
 }
@@ -747,7 +754,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 1.25rem 1.938rem 1.25rem 1.563rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     margin: 1.25rem 0.125rem 1.25rem 0.125rem;
   }
 }
@@ -763,7 +770,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     padding: 4.375rem 1.25rem 4.375rem 1.25rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     padding: 60px 20px;
     min-width: 380px;
   }
@@ -776,10 +783,10 @@ input[type="checkbox"]:checked {
   border-radius: 10px;
   border-width: 3px;
   @media screen and (max-width: 767px) {
-    width: 97%;
-    padding: 1.25rem 2.188rem 1.25rem 2.188rem;
+    width: 95%;
+    padding: 1.25rem 1.875rem 1.25rem 1.875rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     width: 100%;
   }
 }
@@ -818,7 +825,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     padding: 1.875rem 0.438rem 1.25rem 0;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     padding: 1.875rem 1.25rem 0.625rem 0;
   }
 }
@@ -832,7 +839,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 0 1.063rem 0 1.063rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     height: 40px;
   }
 }
@@ -846,7 +853,7 @@ input[type="checkbox"]:checked {
   @media screen and (max-width: 767px) {
     margin: 0 1.063rem 0 1.125rem;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 450px) {
     height: 40px;
     margin-bottom: 0.625rem;
   }
