se ajusta formulario cotizar

--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,8 @@ body {
 }
 @media screen and (max-width: 767px) {
   .parrafo-tiare,
-  .texto-servicio,
-  .opcion {
+.texto-servicio,
+.opcion {
     justify-content: center;
   }
 }
@@ -192,11 +192,11 @@ body {
   text-align: center;
 }
 
-[class^="footer-item"] {
+[class^=footer-item] {
   grid-column: span 4;
 }
 @media screen and (max-width: 450px) {
-  [class^="footer-item"] {
+  [class^=footer-item] {
     grid-column: span 2;
   }
 }
@@ -908,7 +908,7 @@ body {
 }
 @media screen and (max-width: 450px) {
   .footer {
-    height: 350px;
+    height: 340px;
     padding: 35px 10px 20px 10px;
   }
 }
@@ -941,16 +941,16 @@ body {
   }
 }
 
-[class^="footer-item"] {
+[class^=footer-item] {
   margin-left: 47%;
 }
 @media screen and (max-width: 767px) {
-  [class^="footer-item"] {
+  [class^=footer-item] {
     margin-left: 41%;
   }
 }
 @media screen and (max-width: 450px) {
-  [class^="footer-item"] {
+  [class^=footer-item] {
     margin-left: 48%;
   }
 }
@@ -962,6 +962,11 @@ body {
 @media screen and (max-width: 767px) {
   .derechos {
     margin-bottom: 10px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .derechos {
+    margin-top: 25px;
   }
 }
 
@@ -1008,7 +1013,7 @@ body {
   padding-bottom: 0.625rem;
 }
 
-input[type="checkbox"]:checked {
+input[type=checkbox]:checked {
   width: 18px;
   height: 18px;
 }
@@ -1196,13 +1201,14 @@ input[type="checkbox"]:checked {
 }
 @media screen and (max-width: 767px) {
   .palabra_servicio {
+    margin-top: 1.25rem;
     margin-right: 0.813rem;
     margin-left: 0;
   }
 }
 @media screen and (max-width: 450px) {
   .palabra_servicio {
-    margin: 0 0.813rem 0.313rem 0;
+    margin: 1.25rem 0.813rem 0.313rem 0;
   }
 }
 
@@ -1302,7 +1308,7 @@ input[type="checkbox"]:checked {
 }
 @media screen and (max-width: 450px) {
   .fecha {
-    width: 141px;
+    width: 138px;
     margin: 0.313rem 0 0.625rem 0.625rem;
   }
 }
@@ -1626,17 +1632,17 @@ body {
 }
 @media screen and (max-width: 767px) {
   .titulo-tiare,
-  .titulo-servicios,
-  .titulo-reserva,
-  .titulo-empresa {
+.titulo-servicios,
+.titulo-reserva,
+.titulo-empresa {
     font-size: 25px;
   }
 }
 @media screen and (max-width: 450px) {
   .titulo-tiare,
-  .titulo-servicios,
-  .titulo-reserva,
-  .titulo-empresa {
+.titulo-servicios,
+.titulo-reserva,
+.titulo-empresa {
     font-size: 18px;
   }
 }
@@ -1648,15 +1654,15 @@ body {
 }
 @media screen and (max-width: 767px) {
   .parrafo-tiare,
-  .parrafo-reserva,
-  .parrafo-empresa {
+.parrafo-reserva,
+.parrafo-empresa {
     font-size: 18px;
   }
 }
 @media screen and (max-width: 450px) {
   .parrafo-tiare,
-  .parrafo-reserva,
-  .parrafo-empresa {
+.parrafo-reserva,
+.parrafo-empresa {
     font-size: 15px;
   }
 }
@@ -1774,16 +1780,16 @@ body {
   }
 }
 
-[class^="footer-item"] a {
+[class^=footer-item] a {
   font-size: 30px;
 }
 @media screen and (max-width: 767px) {
-  [class^="footer-item"] a {
+  [class^=footer-item] a {
     font-size: 30px;
   }
 }
 @media screen and (max-width: 450px) {
-  [class^="footer-item"] a {
+  [class^=footer-item] a {
     font-size: 20px;
   }
 }
@@ -1872,13 +1878,13 @@ body {
 }
 @media screen and (max-width: 767px) {
   .btn_volver,
-  .formulario__btn {
+.formulario__btn {
     font-size: 14px;
   }
 }
 @media screen and (max-width: 450px) {
   .btn_volver,
-  .formulario__btn {
+.formulario__btn {
     font-size: 12px;
   }
 }
@@ -1922,9 +1928,9 @@ body {
 }
 @media screen and (max-width: 450px) {
   .palabra_servicio,
-  .palabra_fecha,
-  .palabra_horas,
-  .palabra_invitados {
+.palabra_fecha,
+.palabra_horas,
+.palabra_invitados {
     font-size: 15px;
   }
 }
@@ -2077,13 +2083,13 @@ body {
 }
 @media screen and (max-width: 767px) {
   .texto_reservar_uno,
-  .texto_reservar_dos {
+.texto_reservar_dos {
     font-size: 16px;
   }
 }
 @media screen and (max-width: 450px) {
   .texto_reservar_uno,
-  .texto_reservar_dos {
+.texto_reservar_dos {
     font-size: 14px;
   }
 }
@@ -2133,13 +2139,13 @@ body {
 }
 @media screen and (max-width: 767px) {
   .btn_salir,
-  .formulario__btn__dos {
+.formulario__btn__dos {
     font-size: 14px;
   }
 }
 @media screen and (max-width: 450px) {
   .btn_salir,
-  .formulario__btn__dos {
+.formulario__btn__dos {
     font-size: 12px;
   }
 }
@@ -2179,7 +2185,7 @@ body {
   background-color: #cd6032 !important;
 }
 
-[class^="footer-item"] a,
+[class^=footer-item] a,
 .scroll a {
   color: #cd6032;
 }
@@ -2443,7 +2449,7 @@ input:disabled {
 }
 
 /* Formulario de Contacto */
-input[type="checkbox"] {
+input[type=checkbox] {
   transition: all 0.4s;
 }
 
