--- a/css/style.css
+++ b/css/style.css
@@ -744,7 +744,7 @@ body {
 .button-dos {
   height: auto;
   width: 450px;
-  padding: 7px 20px;
+  padding: 8px 20px 5px 20px;
   border-radius: 10px;
   margin-top: 5px;
   margin-bottom: 5px;
