--- a/scss/_medidas.scss
+++ b/scss/_medidas.scss
@@ -182,7 +182,7 @@
 .button-dos {
   height: auto;
   width: 450px;
-  padding: 7px 20px;
+  padding: 8px 20px 5px 20px;
   border-radius: 10px;
   margin-top: 5px;
   margin-bottom: 5px;
