--- a/css/style.css
+++ b/css/style.css
@@ -791,14 +791,14 @@ body {
 }
 
 .img-servicio {
-  width: 50%;
+  width: 55%;
   border-radius: 10px;
 }
 @media screen and (max-width: 767px) {
   .img-servicio {
     margin-top: 10px;
     margin-bottom: 0;
-    width: 40%;
+    width: 50%;
   }
 }
 
@@ -820,16 +820,16 @@ body {
 @media screen and (max-width: 767px) {
   .texto-servicio {
     margin-top: 10px;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 25%;
+    padding-right: 25%;
     padding-bottom: 10px;
   }
 }
 @media screen and (max-width: 450px) {
   .texto-servicio {
     margin-top: 10px;
-    padding-left: 20px;
-    padding-right: 25px;
+    padding-left: 25%;
+    padding-right: 25%;
     padding-bottom: 0;
   }
 }
