--- a/scss/_medidas.scss
+++ b/scss/_medidas.scss
@@ -223,12 +223,12 @@
 }
 
 .img-servicio {
-  width: 50%;
+  width: 55%;
   border-radius: 10px;
   @media screen and (max-width: 767px) {
     margin-top: 10px;
     margin-bottom: 0;
-    width: 40%;
+    width: 50%;
   }
 }
 
@@ -246,14 +246,14 @@
   padding-bottom: 15px;
   @media screen and (max-width: 767px) {
     margin-top: 10px;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 25%;
+    padding-right: 25%;
     padding-bottom: 10px;
   }
   @media screen and (max-width: 450px) {
     margin-top: 10px;
-    padding-left: 20px;
-    padding-right: 25px;
+    padding-left: 25%;
+    padding-right: 25%;
     padding-bottom: 0;
   }
 }
