--- a/css/style.css
+++ b/css/style.css
@@ -798,7 +798,12 @@ body {
   .img-servicio {
     margin-top: 10px;
     margin-bottom: 0;
-    width: 50%;
+    width: 49%;
+  }
+}
+@media screen and (max-width: 450px) {
+  .img-servicio {
+    width: 53%;
   }
 }
 
@@ -808,8 +813,8 @@ body {
 
 .texto-servicio {
   margin-top: 0.625rem;
-  padding-left: 80px;
-  padding-right: 80px;
+  padding-left: 22%;
+  padding-right: 22%;
   padding-bottom: 15px;
 }
 @media screen and (max-width: 767px) {
@@ -823,8 +828,8 @@ body {
 @media screen and (max-width: 450px) {
   .texto-servicio {
     margin-top: 10px;
-    padding-left: 25%;
-    padding-right: 25%;
+    padding-left: 23%;
+    padding-right: 23%;
     padding-bottom: 0;
   }
 }
