--- a/scss/_medidas.scss
+++ b/scss/_medidas.scss
@@ -228,8 +228,11 @@
   @media screen and (max-width: 767px) {
     margin-top: 10px;
     margin-bottom: 0;
-    width: 50%;
+    width: 49%;
   }
+  @media screen and (max-width: 450px) {
+    width: 53%;
+ }
 }
 
 .subtitulo-servicio {
@@ -238,8 +241,8 @@
 
 .texto-servicio {
   margin-top: 0.625rem;
-  padding-left: 80px;
-  padding-right: 80px;
+  padding-left: 22%;
+  padding-right: 22%;
   padding-bottom: 15px;
   @media screen and (max-width: 767px) {
     margin-top: 10px;
@@ -249,8 +252,8 @@
   }
   @media screen and (max-width: 450px) {
     margin-top: 10px;
-    padding-left: 25%;
-    padding-right: 25%;
+    padding-left: 23%;
+    padding-right: 23%;
     padding-bottom: 0;
   }
 }
